Commented my code

--- a/Data_Exploration_Group_Project.ipynb
+++ b/Data_Exploration_Group_Project.ipynb
@@ -413,7 +413,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "[Stage 5:>                                                         (0 + 8) / 10]\r"
      ]
     },
@@ -457,7 +457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "                                                                                \r"
      ]
     }
@@ -988,22 +988,23 @@
     "df_id_inc = df_id.select(\"AINCTOT\", \"AFTOTINC\", \"POVERTY\")\n",
     "df_inc = df_id_inc.filter(df_id_inc.AINCTOT < 200000)\n",
     "df_fam_inc = df_inc.filter(df_inc.AFTOTINC < 800000)\n",
-    "#df_pov = df_fam_inc.filter(df_fam_inc.POVERTY < 800000)\n",
     "\n",
+    "# Create list with column names\n",
     "id_var = df_id_inc.columns\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "\n",
+    "# Setup color palette and plots\n",
     "sns.set_style(\"whitegrid\")\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 8))\n",
     "axes = axes.flatten()\n",
     "\n",
-    "#Plot\n",
+    "# Plot\n",
     "hist(axes[0], df_fam_inc.select(F.col(id_var[0])), bins=20)\n",
     "hist(axes[1], df_fam_inc.select(F.col(id_var[1])), bins=20)\n",
     "hist(axes[2], df_fam_inc.select(F.col(id_var[2])), bins=20)\n",
     "\n",
+    "# Set titles\n",
     "axes[0].set_title(f\"{id_var[0]}\")\n",
     "axes[1].set_title(f\"{id_var[1]}\")\n",
     "axes[2].set_title(f\"{id_var[2]}\")\n",
@@ -1119,12 +1120,15 @@
    "source": [
     "#Plot Distribution of Demographic Variables\n",
     "\n",
+    "# Select variables to be plotted\n",
     "df_dem = df_id.select(\"AGE\", \"RACE\", \"EDUC\")\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "# Create list of column names\n",
     "id_var = df_dem.columns\n",
     "\n",
+    "# Set up color palette and plots\n",
     "sns.set_style(\"whitegrid\")\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 8))\n",
     "axes = axes.flatten()\n",
@@ -1137,7 +1141,7 @@
     "    ax.set_title(f\"{id_var[j]}\")  # Adding title to each subplot\n",
     "\n",
     "\n",
-    "\n",
+    "# Set title\n",
     "fig.suptitle(\"Distribution of Demographic Variables\", fontsize=16)\n",
     "plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "plt.show()"
@@ -3965,8 +3969,10 @@
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "# Create list of columns names\n",
     "hh_var = df_hh.columns\n",
     "\n",
+    "# Select color palette and set up plots\n",
     "sns.set_style(\"whitegrid\")\n",
     "fig, axes = plt.subplots(2, 3, figsize=(15, 8))\n",
     "axes = axes.flatten()\n",
@@ -3979,7 +3985,7 @@
     "    ax.set_title(f\"{hh_var[j]}\")  # Adding title to each subplot\n",
     "\n",
     "\n",
-    "\n",
+    "# Set title\n",
     "fig.suptitle(\"Distribution of Monetary Household Variables\", fontsize=16)\n",
     "plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "plt.show()"
@@ -4012,16 +4018,19 @@
     }
    ],
    "source": [
-    "\n",
+    "# Filter income and home value to remove outliers\n",
     "df_income_filtered = df_hh.filter(df_hh.AHHINCOME < 200000)\n",
     "df_hvalue_filtered = df_hh.filter(df_hh.AVALUEH < 800000)\n",
     "\n",
+    "# Set up plots\n",
     "fig, axes = plt.subplots(1, 2, figsize=(15, 8))\n",
     "axes = axes.flatten()\n",
     "\n",
+    "# Plot\n",
     "hist(axes[0], df_income_filtered.select(F.col(hh_var[25])), bins=20)\n",
     "hist(axes[1], df_hvalue_filtered.select(F.col(hh_var[26])), bins=20)\n",
     "\n",
+    "# Set titles\n",
     "axes[0].set_title(f\"{hh_var[25]}\")\n",
     "axes[1].set_title(f\"{hh_var[26]}\")\n",
     "fig.suptitle(\"Distribution of HH Income below 200k and Home Value below 800k\", fontsize=16)"
