full run of data exploration and preprocessing

--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -71,19 +71,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/06/08 08:32:32 WARN Utils: Your hostname, Taylors-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.4.60 instead (on interface en0)\n",
-      "24/06/08 08:32:32 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/06/08 08:32:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import necessary modules\n",
     "from pyspark.sql import SparkSession\n",
@@ -258,16 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -327,9 +308,10 @@
     "#Import Individual Census Data \n",
     "\n",
     "# Define the path to the CSV file\n",
-    "file_path = \"usa_00006.csv\"\n",
-    " #change this to your own!!\n",
+    "file_path = \"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/usa_00006.csv\"\n",
     "\n",
+    " #change this to your own!!\n",
+    " \n",
     "# Read the CSV file into a DataFrame\n",
     "df_id = spark.read.csv(file_path, header=True, inferSchema=True)\n",
     "\n",
@@ -360,16 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -406,20 +381,7 @@
       " |-- ACOSTGAS: double (nullable = true)\n",
       " |-- ACOSTWATR: double (nullable = true)\n",
       " |-- ACOSTFUEL: double (nullable = true)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "+----+------+------+-------------+-------+------+-------------+-----+--------+-------+------+---+----+--------+---------+-------+-------+--------+-------+--------+----------+-----+--------+---------+------------------+------------------+------------------+------------------+------------------+------------------+------------------+\n",
       "|YEAR|SAMPLE|SERIAL|     CBSERIAL|   HHWT|HHTYPE|      CLUSTER|CPI99|STATEICP|MET2023|STRATA| GQ|FARM|OWNERSHP|OWNERSHPD|TAXINCL|INSINCL|FOODSTMP|CINETHH|VEHICLES|COUPLETYPE|NFAMS|ARENTGRS|ACONDOFEE|         AMOBLHOME|         AHHINCOME|           AVALUEH|         ACOSTELEC|          ACOSTGAS|         ACOSTWATR|         ACOSTFUEL|\n",
       "+----+------+------+-------------+-------+------+-------------+-----+--------+-------+------+---+----+--------+---------+-------+-------+--------+-------+--------+----------+-----+--------+---------+------------------+------------------+------------------+------------------+------------------+------------------+------------------+\n",
@@ -438,7 +400,7 @@
     "#Import Household Census Data \n",
     "\n",
     "# Define the path to the CSV file\n",
-    "file_path = \"usa_00007.csv\" #change this to your own!!\n",
+    "file_path = \"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/usa_00007.csv\" #change this to your own!!\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "df_hh = spark.read.csv(file_path, header=True, inferSchema=True)\n",
@@ -502,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,9 +663,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+\n",
+      "|YEAR|  count|\n",
+      "+----+-------+\n",
+      "|2018|1000701|\n",
+      "|2015|1002140|\n",
+      "|2022|1000453|\n",
+      "|2013|1001492|\n",
+      "|2014|1000578|\n",
+      "|2019| 999725|\n",
+      "|2012| 997299|\n",
+      "|2016| 997981|\n",
+      "|2017|1000345|\n",
+      "|2021| 999712|\n",
+      "+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Combining Individual & Household Data \n",
     "df_h = df_hh.drop('GQ') #drop duplicate columns \n",
@@ -717,9 +701,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----+---+--------+-------+---+---+-----+----+-------+-------+------+----+--------+-------+--------+--------+-------+-------+------------------+------------------+---------+----------+--------+------+--------+----+--------+---------+--------+-------+--------+-----+--------+---------+---------+------------------+-----------+---------+\n",
+      "|CBSERIAL|YEAR| GQ|CBPERNUM|FAMSIZE|SEX|AGE|MARST|RACE|CITIZEN|HCOVANY|SCHOOL|EDUC|SCHLTYPE|EMPSTAT|CLASSWKR|UHRSWORK|LOOKING|POVERTY|           AINCTOT|          AFTOTINC|AINCWELFR| AINCINVST|FULLTIME|HHTYPE|STATEICP|FARM|OWNERSHP|OWNERSHPD|FOODSTMP|CINETHH|VEHICLES|NFAMS|ARENTGRS|ACONDOFEE|AMOBLHOME|         AHHINCOME|    AVALUEH| COSTUTIL|\n",
+      "+--------+----+---+--------+-------+---+---+-----+----+-------+-------+------+----+--------+-------+--------+--------+-------+-------+------------------+------------------+---------+----------+--------+------+--------+----+--------+---------+--------+-------+--------+-----+--------+---------+---------+------------------+-----------+---------+\n",
+      "|     135|2012|  3|       1|      1|  2| 20|    6|   1|      0|      2|     2|   7|       3|      3|       0|       0|      1|      0|               0.0|       7259999.274|      0.0|       0.0|       0|     0|      71|   1|       0|        0|       1|      0|       0|    1|     0.0|      0.0|      0.0|       7259999.274|7259999.274|      0.0|\n",
+      "|     192|2012|  3|       1|      1|  2| 83|    5|   1|      0|      2|     1|   6|       1|      3|       0|       0|      0|      0| 7332.599999999999|       7259999.274|      0.0|       0.0|       0|     0|      14|   1|       0|        0|       1|      0|       0|    1|     0.0|      0.0|      0.0|       7259999.274|7259999.274|      0.0|\n",
+      "|     220|2012|  1|       1|      3|  2| 37|    1|   1|      1|      2|     1|  10|       1|      1|       1|      10|      0|    501|            2904.0|299765.39999999997|      0.0|       0.0|       0|     1|      71|   1|       1|       12|       1|      0|       3|    1|     0.0|      0.0|      0.0|299765.39999999997|   689700.0| 9200.598|\n",
+      "|     220|2012|  1|       2|      3|  1| 45|    1|   1|      2|      2|     1|  11|       1|      1|       2|      50|      2|    501|296861.39999999997|299765.39999999997|      0.0|    4283.4|       1|     1|      71|   1|       1|       12|       1|      0|       3|    1|     0.0|      0.0|      0.0|299765.39999999997|   689700.0| 9200.598|\n",
+      "|     220|2012|  1|       3|      3|  2|  2|    6|   1|      0|      2|     0|   0|       0|      0|       0|       0|      0|    501|       7259999.274|299765.39999999997|72599.274|725999.274|       0|     1|      71|   1|       1|       12|       1|      0|       3|    1|     0.0|      0.0|      0.0|299765.39999999997|   689700.0| 9200.598|\n",
+      "|     263|2012|  1|       1|      1|  2| 71|    4|   1|      0|      2|     1|   6|       1|      3|       0|       0|      1|     92|            7260.0|            7260.0|      0.0|       0.0|       0|     6|      73|   1|       1|       12|       1|      0|       1|    1|     0.0|      0.0|      0.0|            7260.0|    54450.0|22897.314|\n",
+      "|     290|2012|  1|       1|      4|  2| 37|    1|   1|      0|      2|     1|  10|       1|      1|       2|      45|      0|    501|           40656.0|           85668.0|      0.0|       0.0|       1|     1|      43|   1|       2|       22|       1|      0|       2|    1|1539.846|      0.0|      0.0|           85668.0|7259999.274|18176.136|\n",
+      "|     290|2012|  1|       2|      4|  1| 37|    1|   1|      0|      2|     1|  10|       1|      1|       2|      50|      0|    501|           45012.0|           85668.0|      0.0|       0.0|       1|     1|      43|   1|       2|       22|       1|      0|       2|    1|1539.846|      0.0|      0.0|           85668.0|7259999.274|18176.136|\n",
+      "|     290|2012|  1|       3|      4|  1|  4|    6|   1|      0|      2|     1|   0|       1|      0|       0|       0|      0|    501|       7259999.274|           85668.0|72599.274|725999.274|       0|     1|      43|   1|       2|       22|       1|      0|       2|    1|1539.846|      0.0|      0.0|           85668.0|7259999.274|18176.136|\n",
+      "|     290|2012|  1|       4|      4|  1|  1|    6|   1|      0|      2|     0|   0|       0|      0|       0|       0|      0|    501|       7259999.274|           85668.0|72599.274|725999.274|       0|     1|      43|   1|       2|       22|       1|      0|       2|    1|1539.846|      0.0|      0.0|           85668.0|7259999.274|18176.136|\n",
+      "+--------+----+---+--------+-------+---+---+-----+----+-------+-------+------+----+--------+-------+--------+--------+-------+-------+------------------+------------------+---------+----------+--------+------+--------+----+--------+---------+--------+-------+--------+-----+--------+---------+---------+------------------+-----------+---------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "result_df.show(10)"
    ]
@@ -733,20 +740,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[YEAR: double, HHTYPE: double, STATEICP: double, GQ: double, FARM: double, OWNERSHP: double, OWNERSHPD: double, FOODSTMP: double, CINETHH: double, VEHICLES: double, NFAMS: double, ARENTGRS: double, ACONDOFEE: double, AMOBLHOME: double, AHHINCOME: double, AVALUEH: double, COSTUTIL: double, features: vector]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split datasets into train and test\n",
     "\n",
@@ -771,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
