full run of Model 1 and 2

--- a/Model_2.ipynb
+++ b/Model_2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "#World Happiness Data\n",
-    "world_happiness = pd.read_csv(\"World Happiness Report.csv\")\n",
+    "world_happiness = pd.read_csv(\"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/World Happiness Report.csv\")\n",
     "\n",
     "# Filter for USA & years of cencus data\n",
     "US_happiness =  world_happiness.loc[world_happiness['Country Name'] == 'United States']\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -218,14 +218,15 @@
        "1523  United States  2012            7.270               6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#World Happiness Results \n",
-    "happiness_rank = pd.read_csv(\"World_Happiness_Index.csv\")\n",
+    "happiness_rank = pd.read_csv(\"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/World_Happiness_Index.csv\"\n",
+    ")\n",
     "\n",
     "# Filter for USA & years of cencus data\n",
     "happiness_rank = happiness_rank.loc[happiness_rank['Country'] == 'United States']\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,8 @@
     "#Import Individual Census Data \n",
     "\n",
     "# Define the path to the CSV file\n",
-    "file_path = \"usa_00006.csv\"\n",
+    "file_path = \"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/usa_00006.csv\"\n",
+    "\n",
     " #change this to your own!!\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +400,7 @@
     "#Import Household Census Data \n",
     "\n",
     "# Define the path to the CSV file\n",
-    "file_path = \"usa_00007.csv\" #change this to your own!!\n",
+    "file_path = \"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/usa_00007.csv\" #change this to your own!!\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "df_hh = spark.read.csv(file_path, header=True, inferSchema=True)\n",
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -694,14 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_871bf73bfbb1, depth=5, numNodes=11, numClasses=3, numFeatures=4\n",
+      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_fadcf7718760, depth=5, numNodes=11, numClasses=3, numFeatures=4\n",
       "  If (STATEICP <= 5285725.2155)\n",
       "   Predict: Own\n",
       "  Else (STATEICP > 5285725.2155)\n",
@@ -775,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1063,14 +1065,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_3f7444867341, depth=5, numNodes=27, numClasses=3, numFeatures=14\n",
+      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_4ed89f6304e7, depth=5, numNodes=27, numClasses=3, numFeatures=14\n",
       "  If (AFTOTINC <= 37155.0)\n",
       "   If (AGE <= 47.5)\n",
       "    If (AFTOTINC <= 22836.7)\n",
@@ -1170,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1215,14 +1217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_e7f44a94e5fc, depth=5, numNodes=37, numClasses=3, numFeatures=13\n",
+      "DecisionTreeClassificationModel: uid=DecisionTreeClassifier_531a83311699, depth=5, numNodes=37, numClasses=3, numFeatures=13\n",
       "  If (HHTYPE <= 1.5)\n",
       "   If (HHTYPE <= 0.5)\n",
       "    If (AGE <= 41.5)\n",
@@ -1336,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
