changing file paths back to generic

--- a/Model_1.ipynb
+++ b/Model_1.ipynb
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "#World Happiness Data\n",
-    "world_happiness = pd.read_csv(\"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/World Happiness Report.csv\")\n",
+    "world_happiness = pd.read_csv(\"World Happiness Report.csv\")\n",
     "\n",
     "# Filter for USA & years of cencus data\n",
     "US_happiness =  world_happiness.loc[world_happiness['Country Name'] == 'United States']\n",
@@ -225,7 +225,7 @@
    ],
    "source": [
     "#World Happiness Results \n",
-    "happiness_rank = pd.read_csv(\"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/World_Happiness_Index.csv\"\n",
+    "happiness_rank = pd.read_csv(\"World_Happiness_Index.csv\"\n",
     ")\n",
     "\n",
     "# Filter for USA & years of cencus data\n",
@@ -308,7 +308,7 @@
     "#Import Individual Census Data \n",
     "\n",
     "# Define the path to the CSV file\n",
-    "file_path = \"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/usa_00006.csv\"\n",
+    "file_path = \"usa_00006.csv\"\n",
     "\n",
     " #change this to your own!!\n",
     "\n",
@@ -400,7 +400,7 @@
     "#Import Household Census Data \n",
     "\n",
     "# Define the path to the CSV file\n",
-    "file_path = \"C:/Users/Parker Aman/dev/Dev_School/Big Data/Group Project/usa_00007.csv\" #change this to your own!!\n",
+    "file_path = \"usa_00007.csv\" #change this to your own!!\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "df_hh = spark.read.csv(file_path, header=True, inferSchema=True)\n",
